src/objects/Game_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Settings for the Appirio Gamification Engine (AGE).</description>
    <fields>
        <fullName>Award_Anniversary_Back_Days__c</fullName>
        <description>The number of days to back date the awarding of Employee Anniversary</description>
        <inlineHelpText>The number of days to back date the awarding of Employee Anniversary</inlineHelpText>
        <label>Award Anniversary Back Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Challenge_Certification__c</fullName>
        <description>Which Challenge to award for someone who achieves a professional certification.</description>
        <inlineHelpText>Which Challenge to award for someone who achieves a professional certification.</inlineHelpText>
        <label>Challenge - Certification</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Challenge_Idea_Gets_Implemented__c</fullName>
        <description>Automated awarding of Challenge - Idea Gets Implemented</description>
        <inlineHelpText>Automated awarding of Challenge - Idea Gets Implemented</inlineHelpText>
        <label>Challenge - Idea Gets Implemented</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Challenge_Million_Biller__c</fullName>
        <description>Employees that have logged &gt;1M in timecards for fixed fee and/or T&amp;M.</description>
        <inlineHelpText>Employees that have logged &gt;1M in timecards for fixed fee and/or T&amp;M.</inlineHelpText>
        <label>Challenge - Million Biller</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Challenge_Use_Asset_on_Won_Opportunity__c</fullName>
        <description>Which challenge to award to opportunity and PSR owners when an asset is used on a won opportunity.</description>
        <inlineHelpText>Which challenge to award to opportunity and PSR owners when an asset is used on a won opportunity.</inlineHelpText>
        <label>Challenge - Use Asset on Won Opportunity</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatter_Challenges_For_Points_Bucket__c</fullName>
        <description>Challenges associated to the shareable Points Bucket a user creates from the Point Summary page.</description>
        <inlineHelpText>Challenges associated to the shareable Points Bucket a user creates from the Point Summary page.</inlineHelpText>
        <label>Chatter Challenges For Points Bucket</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatter_From_Email_Address_Id__c</fullName>
        <description>Id to the Org Email Address used in the emails sent out to notify users that Chattered about Challenges that did not have Points Buckets to do so.</description>
        <inlineHelpText>OrgWideEmailAddress displayed in the From for emails sent out via Chatter Challenges that had errors.</inlineHelpText>
        <label>Chatter - From Email Address Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatter_Group_ID_All_Activities__c</fullName>
        <description>Sobject ID of the Chatter Group to which all activity notifications should be posted.</description>
        <inlineHelpText>Sobject ID of the Chatter Group to which all activity notifications should be posted.</inlineHelpText>
        <label>Chatter Group ID - All Activities</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Store_TargetRecordId__c</fullName>
        <description>The Id for the Company Store.  This is an arbitrary Id.</description>
        <inlineHelpText>The Id for the Company Store.  This is an arbitrary Id.</inlineHelpText>
        <label>Company Store TargetRecordId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Earned_Points_RecordTypeId__c</fullName>
        <description>The Id for the Record Type of Earned Points.</description>
        <inlineHelpText>The Id for the Record Type of Earned Points.</inlineHelpText>
        <label>Earned Points RecordTypeId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_10_Year_Anniversary__c</fullName>
        <description>Employee 10 Year Anniversary</description>
        <inlineHelpText>Employee 10 Year Anniversary</inlineHelpText>
        <label>Employee 10 Year Anniversary</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_11_Year_Anniversary__c</fullName>
        <description>Employee 11 Year Anniversary</description>
        <inlineHelpText>Employee 11 Year Anniversary</inlineHelpText>
        <label>Employee 11 Year Anniversary</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_12_Year_Anniversary__c</fullName>
        <description>Employee 12 Year Anniversary</description>
        <inlineHelpText>Employee 12 Year Anniversary</inlineHelpText>
        <label>Employee 12 Year Anniversary</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fun_Factor__c</fullName>
        <description>Company Fun Factor that is displayed on the Community page</description>
        <inlineHelpText>Company Fun Factor that is displayed on the Community page</inlineHelpText>
        <label>Fun Factor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_User_Id__c</fullName>
        <description>System User Id that will be used to populate the GameEngine methods for Awarded By User.</description>
        <inlineHelpText>System User Id that will be used to populate the GameEngine methods for Awarded By User.</inlineHelpText>
        <label>System User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transferred_Points_RecordTypeId__c</fullName>
        <description>The Id of the Record Type for Transferred Points.</description>
        <inlineHelpText>The Id of the Record Type for Transferred Points.</inlineHelpText>
        <label>Transferred Points RecordTypeId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Game Settings</label>
</CustomObject>